--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
 	<head lang="en">
     	<meta charset="UTF-8">
     	<title></title>
+    	 <link rel="stylesheet" href="stylesheets/style.css">
 	</head>
 	<body>
 		<div id="app"></div>
-		<script src="javascript/app.js"></script>
+		<script src="common.js"></script>
+		<script src="app.js"></script>
 	</body>
 </html>
